# clinical-knowledge-graph

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
api/: .dockerignore  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  main.py  pyproject.toml
api/app/: config.py  db.py  main.py
api/app/evaluator/: __init__.py  engine.py  graph.py  modifiers.py  preemption.py  trace.py
api/app/queries/: guidelines_query.py  interactions_query.py
api/app/routes/: evaluate.py  guidelines.py  health.py  interactions.py  nodes.py  subgraph.py
api/tests/: conftest.py  test_contract_alignment.py  test_entities.py  test_evaluator_case_03.py  test_evaluator_fixtures.py  test_evaluator_fixtures_cholesterol.py  test_evaluator_fixtures_kdigo.py  test_evaluator_multi_guideline.py  test_health.py  test_modifiers.py  test_nodes.py  test_preemption.py  test_subgraph.py
api/tests/eval/: test_placeholder.py
api/tests/integration/: test_placeholder.py
api/tests/queries/: test_guidelines_query.py  test_interactions_query.py
api/tests/routes/: test_guidelines.py  test_interactions.py
api/tests/test_predicates/: test_composites.py  test_conditions.py  test_medications.py  test_observations.py  test_risk_score.py  test_smoking.py
api/tests/unit/: test_healthz.py
evals/: .gitignore  INVENTORY.md  README.md  SPEC.md  pyproject.toml  rubric.md
evals/harness/: __init__.py  __main__.py  braintrust_client.py  cache.py  config.py  eval_runner.py  fixtures.py  judge.py  report.py  runner.py  scorecard.py  scorecard_cli.py  serialization.py
evals/tests/: test_cache.py  test_eval_runner.py  test_fixtures.py  test_flat_rag.py  test_judge_structural.py  test_report.py  test_runner_integration.py  test_scorecard.py  test_serialization.py
(+308 files in other folders)
