[project]
name = "ckg-evals"
version = "0.1.0"
description = "Three-arm eval harness for the Clinical Knowledge Graph"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "braintrust>=0.0.160",
    "openai>=1.50.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
